# a2a-wrapper

./: .gitignore  DOCS.md  FULL_PROJECT.md  PROJECT.md  PUBLISHING.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml  verify_installed_import.py
.github/workflows/: ci.yml  publish.yml
examples/: README.md  my_crewai_agent.py  my_langchain_agent.py
src/a2a_wrapper/: __init__.py  _client.py  _server.py  client.py  server.py
tests/: test_client_helpers.py  test_client_import_guard.py  test_package_exports.py  test_smoke_e2e.py
